cabal-version:      2.4
name:               prettyprinter-configurable
version:            1.0.0.0
synopsis:           Configurable pretty-printing
homepage:
  https://github.com/effectfully/prettyprinter-configurable

license: Apache-2.0
license-files:
  LICENSE

author:             David Luposchainsky, effectfully
maintainer:         effectfully@gmail.com
category:           User Interfaces, Text
build-type:         Simple
extra-source-files: README.md

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Text.Fixity
    Text.Fixity.Internal
    Text.Pretty
    Text.PrettyBy
    Text.PrettyBy.Default
    Text.PrettyBy.Fixity
    Text.PrettyBy.Internal
    Text.PrettyBy.Internal.Utils
    Text.PrettyBy.Monad

  build-depends:
    , base           >=4.9 && <5
    , microlens
    , mtl
    , prettyprinter
    , text

test-suite prettyprinter-configurable-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: test
  other-modules:
    Default
    Expr
    NonDefault
    Universal

  build-depends:
    , base                        >=4.9   && <5
    , megaparsec
    , parser-combinators
    , prettyprinter-configurable
    , QuickCheck
    , quickcheck-text
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
